[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/hungry_man/HungryMan.gd" type="Script" id=1]
[ext_resource path="res://textures/character/hungry.png" type="Texture" id=2]
[ext_resource path="res://textures/character/fat.png" type="Texture" id=3]
[ext_resource path="res://resources/particles/walk_particle.tres" type="Material" id=4]
[ext_resource path="res://textures/particle/fat_walk.png" type="Texture" id=5]
[ext_resource path="res://textures/character/muscular.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "fat_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "fat_walk",
"speed": 16.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "hungry_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "hungry_walk",
"speed": 12.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "muscular_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "muscular_walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 13 )

[sub_resource type="CircleShape2D" id=42]
radius = 16.0

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 9, 16 )

[node name="HungryMan" type="KinematicBody2D"]
position = Vector2( 160, 142 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="WalkParticle" type="Particles2D" parent="."]
position = Vector2( 0, 14 )
emitting = false
amount = 3
lifetime = 1.1
speed_scale = 2.0
randomness = 0.1
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 14 )
frames = SubResource( 14 )
animation = "hungry_idle"
playing = true
offset = Vector2( 0, -14 )

[node name="HungryShape" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 4 )

[node name="FatShape" type="CollisionShape2D" parent="."]
shape = SubResource( 42 )
disabled = true

[node name="MuscularShape" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 44 )
disabled = true
